[gd_scene load_steps=3 format=2]

[ext_resource path="res://Panel.gd" type="Script" id=1]
[ext_resource path="res://Button.tscn" type="PackedScene" id=2]

[node name="Panel" type="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -5.0
margin_right = 725.0
margin_bottom = 733.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 9.0
margin_right = 192.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Scroll" ]

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 87.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Button" parent="ScrollContainer/VBoxContainer" index="0" instance=ExtResource( 2 )]

margin_right = 87.0

[node name="Button2" parent="ScrollContainer/VBoxContainer" index="1" instance=ExtResource( 2 )]

margin_top = 24.0
margin_right = 87.0
margin_bottom = 44.0

[node name="Button3" parent="ScrollContainer/VBoxContainer" index="2" instance=ExtResource( 2 )]

margin_top = 48.0
margin_right = 87.0
margin_bottom = 68.0

[node name="Button4" parent="ScrollContainer/VBoxContainer" index="3" instance=ExtResource( 2 )]

margin_top = 72.0
margin_right = 87.0
margin_bottom = 92.0

[node name="Button5" parent="ScrollContainer/VBoxContainer" index="4" instance=ExtResource( 2 )]

margin_top = 96.0
margin_right = 87.0
margin_bottom = 116.0

[node name="Button" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 346.0
margin_top = 39.0
margin_right = 547.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add Btn"
flat = false
align = 1

[connection signal="scroll_ended" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]

[connection signal="scroll_started" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_started"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


